--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@ float:right;
 
 	      
 <center><h2>C.V.</h2></center>
-<center><a href="http://web-docs.gsi.de/~afoda/AMFoda_CV.pdf">Download</a></center><br>
+<center><a href="http://amfoda.github.io/AMFoda_CV.pdf">Download</a></center><br>
 
 <center><h2>Contact</h2></center><br>
 
