--- a/teaching.html
+++ b/teaching.html
@@ -26,12 +26,12 @@ float:right;
 		       <center><h1>A. M. Foda's Teaching</h1></center>
 		<div id="bar">
 		 <center>
-		<div class="link"><a href="http://web-docs.gsi.de/~afoda/index.html">Home</a></div> 
-		<div class="link"><a href="http://web-docs.gsi.de/~afoda/research.html">Research</a></div> 
-		<div class="link"><a href="http://web-docs.gsi.de/~afoda/pub.html">Publications</a></div>  
-		<div class="link"><a href="http://web-docs.gsi.de/~afoda/teaching.html">Teaching</a></div>
-		<div class="link"><a href="http://web-docs.gsi.de/~afoda/interests.html">Interests</a></div>  
-		<div class="link"><a href="http://web-docs.gsi.de/~afoda/contact.html">Contact</a> </div>
+		<div class="link"><a href="http://amfoda.github.io/~afoda/index.html">Home</a></div>
+		<div class="link"><a href="http://amfoda.github.io/~afoda/research.html">Research</a></div>
+		<div class="link"><a href="http://amfoda.github.io/~afoda/pub.html">Publications</a></div>
+		<div class="link"><a href="http://amfoda.github.io/~afoda/teaching.html">Teaching</a></div>
+		<div class="link"><a href="http://amfoda.github.io/~afoda/interests.html">Interests</a></div>
+		<div class="link"><a href="http://amfoda.github.io/~afoda/contact.html">Contact</a> </div>
 		</center></div>
 			   
 		 </div>
