--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@ float:right;
 		       <center><h1>Ahmed Marwan Foda</h1></center>
 		<div id="bar">
 		 <center>
-		<div class="link"><a href="http://web-docs.gsi.de/~afoda/index.html">Home</a></div> 
-		<div class="link"><a href="http://web-docs.gsi.de/~afoda/research.html">Research</a></div> 
-		<div class="link"><a href="http://web-docs.gsi.de/~afoda/pub.html">Publications</a></div>  
-		<div class="link"><a href="http://web-docs.gsi.de/~afoda/teaching.html">Teaching</a></div>
-		<div class="link"><a href="http://web-docs.gsi.de/~afoda/interests.html">Interests</a></div>  
-		<div class="link"><a href="http://web-docs.gsi.de/~afoda/contact.html">Contact</a> </div>
+		<div class="link"><a href="http://amfoda.github.io/~afoda/index.html">Home</a></div>
+		<div class="link"><a href="http://amfoda.github.io/~afoda/research.html">Research</a></div>
+		<div class="link"><a href="http://amfoda.github.io/~afoda/pub.html">Publications</a></div>
+		<div class="link"><a href="http://amfoda.github.io/~afoda/teaching.html">Teaching</a></div>
+		<div class="link"><a href="http://amfoda.github.io/~afoda/interests.html">Interests</a></div>
+		<div class="link"><a href="http://amfoda.github.io/~afoda/contact.html">Contact</a> </div>
 		</center></div>
 			   
 		 </div>
@@ -55,7 +55,7 @@ Postdoctoral fellow at the <a href="https://www.gsi.de/"><u>GSI Helmholtz Centre
 
     
         <font color="F00000" size="2" face="Times New Roman">
-        <a href="http://web-docs.gsi.de/~afoda/Impressum.html" target="_blank">
+        <a href="http://amfoda.github.io/~afoda/Impressum.html" target="_blank">
         Impressum</a></font><p><font color="F00000" size="2" face="Times New Roman">
         <a href="https://www.gsi.de/en/bottommenu/data_privacy_protection.htm" target="_blank">
         Data privacy protection</a></font>
