--- a/public/publication-type/article/index.html
+++ b/public/publication-type/article/index.html
@@ -271,7 +271,7 @@
 
 
 
-  <meta name="author" content="Prefered Name: Foda" />
+  <meta name="author" content="Ahmed Marwan Foda" />
 
 
 
@@ -695,7 +695,7 @@
         
 
   <span class="author-highlighted">
-      Prefered Name: Foda</span>
+      Ahmed Marwan Foda</span>
       </div>
       
     </div>
