--- a/public/publication-type/paper-conference/index.html
+++ b/public/publication-type/paper-conference/index.html
@@ -271,7 +271,7 @@
 
 
 
-  <meta name="author" content="Prefered Name: Foda" />
+  <meta name="author" content="Ahmed Marwan Foda" />
 
 
 
@@ -695,7 +695,7 @@
         
 
   <span class="author-highlighted">
-      Prefered Name: Foda</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
+      Ahmed Marwan Foda</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>, <span >
       Robert Ford</span><i class="author-notes fas fa-info-circle" data-toggle="tooltip" title="Equal contribution"></i>
       </div>
       
