--- a/public/publication/conference-paper/index.html
+++ b/public/publication/conference-paper/index.html
@@ -314,9 +314,6 @@
 
 
 <meta property="twitter:card" content="summary_large_image" />
-
-  <meta property="twitter:site" content="@GetResearchDev" />
-  <meta property="twitter:creator" content="@GetResearchDev" />
 <meta property="twitter:image" content="http://localhost:1313/publication/conference-paper/featured.jpg" />
 
 
@@ -1259,7 +1256,7 @@
 
   
   <p class="powered-by copyright-license-text">
-    © 2024 Me. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
+    © 2024 Ahmed Marwan Foda. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
   </p>
   
 
