updating cv .. third time is a charm

--- a/public/project/example/index.html
+++ b/public/project/example/index.html
@@ -1024,7 +1024,7 @@
       
     
     <li>
-      <a href="https://inspirehep.net/author/profile/A.M.Foda.1" target="_blank" rel="noopener">
+      <a href="https://inspirehep.net/authors/1677623" target="_blank" rel="noopener">
         <i class="fas fa-graduation-cap"></i>
       </a>
     </li>
